<?xml version="1.0"?>
<package format="3">
  <name>gui_image_streamer</name>
  <version>1.0.0</version>
  <description>WebSocket image streamer for GUI (Python)</description>
  <maintainer email="user@robot.com">user</maintainer>
  <license>MIT</license>
 
  <!-- Python ROS2 package usa ament_python em vez de ament_cmake -->
  <buildtool_depend>ament_python</buildtool_depend>
 
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
 
  <!-- python3-websockets instalado via pip, não via rosdep -->
</package>